# my_work_pkg

./: .gitignore  MUJOCO_LOG.TXT  frames_2026-06-25_10.52.03.gv
.claude/: settings.local.json
src/: meshes
src/robo_description/: CMakeLists.txt  package.xml
src/robo_description/include/GLFW/: glfw3.h
src/robo_description/launch/: impedance_control.launch.py  replay_yz_pin.launch.py  replay_yz_pin_v.launch.py  robot_sim.launch.py  sin_control.launch.py  sin_xz_control.launch.py  sin_yz_control.launch.py  sin_yz_pin.launch.py
src/robo_description/model/: marvin_pro_mink_with_gripper.xml  marvin_robot.urdf  marvin_v.xml
src/robo_description/rviz/: robot_display.rviz
src/robo_description/src/: impedance_control_node.cpp  impedance_simulate_main.cpp  replay_yz_pin.cpp  replay_yz_pin_v.cpp  robo_des.cpp  sin_control.cpp  sin_xz_control.cpp  sin_yz_control.cpp  sin_yz_pin.cpp
